feat(namespace): export namespace analytics as CSV
